--- a/corehq/apps/users/templates/users/web_users.b3.html
+++ b/corehq/apps/users/templates/users/web_users.b3.html
@@ -250,7 +250,7 @@
                         <h4 class="modal-title">{% trans "Delete invitation" %}</h4>
                     </div>
                     <div class="modal-body">
-                        <h4> {% trans "Are you sure you want to delete this invitation?" %}</h4>
+                        <p>{% trans "Are you sure you want to delete this invitation?" %}</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Cancel" %}</button>
