--- a/corehq/apps/style/static/dashboard/less/dashboard.less
+++ b/corehq/apps/style/static/dashboard/less/dashboard.less
@@ -67,6 +67,14 @@
       background-color: rgba(255, 255, 255, 0.4);
       &:hover {
         background-color: rgba(244, 244, 244, 0.9);
+
+        .icon {
+          visibility: visible;
+        }
+      }
+      .icon {
+        float: right;
+        visibility: hidden;
       }
     }
   }
