--- a/corehq/apps/reports/templates/reports/reportdata/case_export_data.html
+++ b/corehq/apps/reports/templates/reports/reportdata/case_export_data.html
@@ -15,7 +15,8 @@
         var exportManager = new ExportManager( {
             domain: '{{ domain }}',
             exportFilters: '{{ get_filter_params.urlencode|safe }}',
-            downloadUrl: '{% url "download_cases" domain %}'
+            downloadUrl: '{% url "download_cases" domain %}',
+            export_type: "case"
         } );
         $('#full-case-export').one().each(function () {
             ko.applyBindings(exportManager, this);
@@ -79,7 +80,11 @@
                         </a>
                     </td>
                     <td class="cell-vertical-centered">
-                        <a data-toggle="modal" href="#export-download-status" data-backdrop="static" data-formname="{{ export.name }}" data-dlocation='{% url "export_custom_data" domain export.get_id %}?type=case&{{ get_filter_params.urlencode|safe }}&async=true'
+                        <a data-toggle="modal"
+                           href="#export-download-status"
+                           data-backdrop="static"
+                           data-formname="{{ export.name }}"
+                           data-dlocation='{% url "export_custom_data" domain export.get_id %}?type=case&{{ get_filter_params.urlencode|safe }}&async=true'
                            class="btn btn-primary export-action-download" ><i class="icon-download-alt icon-white"></i> {% trans "Download" %}</a>
                     </td>
                     <td class="cell-vertical-centered">
