--- a/corehq/ex-submodules/casexml/apps/case/templates/case/partials/single_case.html
+++ b/corehq/ex-submodules/casexml/apps/case/templates/case/partials/single_case.html
@@ -83,31 +83,7 @@
     {% endif %}
     {% if case.case_attachments %}
         <div class="tab-pane" id="case-attachments">
-            <table class="table table-striped table-hover">
-            {% for attach_key, attachment in case.case_attachments.items %}
-            <tr><td>
-            <dl class="dl-horizontal">
-                {% if not forloop.first %}<br>{% endif %}
-                <dt>{% trans "Case Property" %}</dt>
-                    <dd>{{ attach_key }}</dd>
-                <dt>{% trans "Source File" %}</dt>
-                    <dd>{{ attachment.attachment_src }}</dd>
-                <dt>{% trans "File Type" %}</dt>
-                    <dd>{{ attachment.server_mime }}</dd>
-                <dt>{% trans "File Size" %}</dt>
-                    <dd>{{ attachment.attachment_size }} bytes</dd>
-                {% if attachment.is_image %}
-                    <dt>{% trans "Image" %}</dt>
-                    {# Note to devs, the api_case_attachment url is a named url not implemented by the casexml app - an external app must implement this URL #}
-                    <dd><img src="{% url "api_case_attachment" domain=case.domain case_id=case.get_id attachment_id=attach_key %}?img&size=large_square"></dd>
-                {% else %}
-                    <dt>{% trans "Link" %}</dt>
-                    <dd><a href="{% url "api_case_attachment" domain=case.domain case_id=case.get_id attachment_id=attach_key %}">Download</a></dd>
-                {% endif %}
-            </dl>
-            </td></tr>
-            {% endfor %}
-            </table>
+            {% include "case/partials/case_attachments.html" %}
         </div> <!-- end case-attachments tab -->
     {% endif %}
     {% if ledgers %}
