--- a/corehq/apps/reports/templates/reports/reportdata/case_export_data.html
+++ b/corehq/apps/reports/templates/reports/reportdata/case_export_data.html
@@ -22,6 +22,15 @@
         });
 
     </script>
+
+    <script type="text/javascript">
+        $('.hq-generic-report').on('apply-click', function() {
+            $('.user-type-btn').trigger({
+                type: 'applied-click',
+                event_category: 'Case Exports'
+            });
+        });
+    </script>
 {% endblock %}
 
 {% block reportcontent %}
