Add GA event for updating mobile user info

--- a/corehq/apps/users/templates/users/edit_commcare_user.html
+++ b/corehq/apps/users/templates/users/edit_commcare_user.html
@@ -121,7 +121,7 @@
     </ul>
     <div class="tab-content" id="settings">
         <div class="tab-pane" id="basic-info">
-            {% include 'users/partial/basic_info_form.html' %}
+            {% include 'users/partial/basic_info_form.html' with user_type="mobile"%}
         </div>
 
         <div class="tab-pane" id="groups">
