--- a/corehq/apps/users/templates/users/edit_full_user.html
+++ b/corehq/apps/users/templates/users/edit_full_user.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block main_column %}
-{% include 'users/partial/basic_info_form.html' %}
+{% include 'users/partial/basic_info_form.html' with user_type="web"%}
 {% endblock %}
 
 {% block modals %}{{ block.super }}
