upgrade tracking for 'View on Exchange' to gaTrackLink

--- a/corehq/apps/domain/templates/domain/snapshot_settings.html
+++ b/corehq/apps/domain/templates/domain/snapshot_settings.html
@@ -30,11 +30,7 @@
     </script>
     <script>
         function view_on_exchange(version_name) {
-            ga_track_event('Exchange', 'View on exchange', version_name, {
-                'hitCallback': function () {
-                    document.location = $('#view-on-exchange').attr('href');
-                }
-            });
+            gaTrackLink($('#view-on-exchange'), 'Exchange', 'View on exchange', version_name);
             return false;
         }
 
