--- a/corehq/apps/reports/templates/reports/reportdata/case_export_data.html
+++ b/corehq/apps/reports/templates/reports/reportdata/case_export_data.html
@@ -85,6 +85,7 @@
                            data-backdrop="static"
                            data-formname="{{ export.name }}"
                            data-dlocation='{% url "export_custom_data" domain export.get_id %}?type=case&{{ get_filter_params.urlencode|safe }}&async=true'
+                           data-caseType="{{ export.index.1|escapejs}}"
                            class="btn btn-primary export-action-download" ><i class="icon-download-alt icon-white"></i> {% trans "Download" %}</a>
                     </td>
                     <td class="cell-vertical-centered">
