Rework "Download Form Export" events
- The raw download event uses the form name as the label
- The custom, saved, and deidentified downloads use the form xmlns
  as the event label.

--- a/corehq/apps/reports/templates/reports/reportdata/excel_export_data.html
+++ b/corehq/apps/reports/templates/reports/reportdata/excel_export_data.html
@@ -50,6 +50,11 @@
             ko.applyBindings(metadataExportManager, this);
         });
 
+        $('.daily-saved-download').click(function(){
+            var xmlns = $(this).attr("data-typeIdentifier");
+            ga_track_event("Download Form Export", "Download Saved Form Export", xmlns);
+        });
+
         $(function () {
             // postGo is copied from main.js since that's now not being included, ever since the redesign
             function postGo (url, params) {
