--- a/custom/ewsghana/templates/ewsghana/partials/report_table.html
+++ b/custom/ewsghana/templates/ewsghana/partials/report_table.html
@@ -62,7 +62,7 @@
 {% endif %}
 
 <script type="text/javascript">
-   {% if report_table and report_table.datatables %}
+   {% if report_table and show_table %}
         var dataTablesDom = "frt<'row-fluid dataTables_control'<'span5'il><'span7'p>>";
 
         var params = {
