use uncompressed-js block

--- a/corehq/apps/app_manager/templates/app_manager/summary_new.html
+++ b/corehq/apps/app_manager/templates/app_manager/summary_new.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="{% new_static 'app_manager/js/app_summary.ng.js' %}"></script>
 {% endblock js %}
 
-{% block js-inline %} {{ block.super }}
+{% block uncompressed-js %} {{ block.super }}
     <script type="text/javascript">
         (function (angular, undefined) {
             'use strict';
