--- a/corehq/apps/app_manager/templates/app_manager/ng_partials/case_summary_view.html
+++ b/corehq/apps/app_manager/templates/app_manager/ng_partials/case_summary_view.html
@@ -26,17 +26,31 @@
             </form>
         </div>
         <div class="col-md-6">
-             <div class="btn-group pull-right">
-                <button type="button" class="btn btn-default"
-                        ng-click="showConditions = !showConditions"
-                        ng-class="{ 'active' : showConditions }">
-                    <i class="fa fa-sitemap"></i> {% trans "Conditions" %}
-                </button>
-                <button type="button" class="btn btn-default"
-                        ng-click="showCalculations = !showCalculations"
-                        ng-class="{ 'active' : showCalculations }">
-                    <i class="fa fa-calculator"></i> {% trans "Calculations" %}
-                </button>
+            <div class="btn-toolbar pull-right" role="toolbar">
+                <div class="btn-group" role="group" >
+                    <button type="button" class="btn btn-default"
+                            ng-click="showLabels = true"
+                            ng-class="{ 'active' : showLabels }">
+                        {% trans "Labels" %}
+                    </button>
+                    <button type="button" class="btn btn-default"
+                            ng-click="showLabels = false"
+                            ng-class="{ 'active' : !showLabels }">
+                        {% trans "Question IDs" %}
+                    </button>
+                </div>
+                <div class="btn-group" role="group" >
+                    <button type="button" class="btn btn-default"
+                            ng-click="showConditions = !showConditions"
+                            ng-class="{ 'active' : showConditions }">
+                        <i class="fa fa-sitemap"></i> {% trans "Conditions" %}
+                    </button>
+                    <button type="button" class="btn btn-default"
+                            ng-click="showCalculations = !showCalculations"
+                            ng-class="{ 'active' : showCalculations }">
+                        <i class="fa fa-calculator"></i> {% trans "Calculations" %}
+                    </button>
+                </div>
             </div>
          </div>
     </div>
@@ -81,11 +95,13 @@
                             <td><form-questions
                                     questions="form.load_questions"
                                     show-conditions="showConditions"
-                                    show-calculations="showCalculations"></form-questions></td>
+                                    show-calculations="showCalculations"
+                                    show-labels="showLabels"></form-questions></td>
                             <td><form-questions
                                     questions="form.save_questions"
                                     show-conditions="showConditions"
-                                    show-calculations="showCalculations"></form-questions></td>
+                                    show-calculations="showCalculations"
+                                    show-labels="showLabels"></form-questions></td>
                         </tr>
                     </tbody>
                 </table>
@@ -128,7 +144,8 @@
 <ul class="fa-ul">
     <li ng-repeat="question in questions">
         {% verbatim %}<i class="fa-li fcc {{ getIcon(question.question.type) }}"></i>{% endverbatim %}
-        {{ question.question.value }}
+        <span ng-show="showLabels">{{ question.question.label }}</span>
+        <span ng-hide="showLabels">{{ question.question.value }}</span>
         <ul class="fa-ul" ng-if="question.condition" ng-show="showConditions">
             <li>
                 <i class="fa-li fa fa-sitemap text-muted"></i> {{ question.condition.question }} {{ question.condition.operator }} {{ question.condition.answer }}
