--- a/corehq/apps/app_manager/templates/app_manager/ng_partials/case_summary_view.html
+++ b/corehq/apps/app_manager/templates/app_manager/ng_partials/case_summary_view.html
@@ -23,6 +23,7 @@
                 <label class="sr-only" for="property">{% trans "Filter properties" %}</label>
                 <input type="text" class="form-control" id="property" placeholder="Filter properties" ng-model="propertySearch.name">
               </div>
+              <button class="btn btn-default" ng-click="propertySearch.name = ''"><i class="fa fa-times"></i></button>
             </form>
         </div>
         <div class="col-md-6">
