--- a/corehq/apps/app_manager/templates/app_manager/ng_partials/form_summary_view.html
+++ b/corehq/apps/app_manager/templates/app_manager/ng_partials/form_summary_view.html
@@ -5,17 +5,22 @@
 
 {% block navigation_extra %}
 {% angularjs %}
-    <li role="presentation">
+    <li role="presentation" ng-class="{ 'active' : allSelected()}">
         <a ng-click="filterList()">{% trans "All Forms" %}</a>
-        <ul>
-            <li ng-repeat="module in modules">
-                <i class="fa fa-folder-open"></i> <a ng-click="filterList(module.name)">{{ module.name }}</a>
-                <ul>
-                    <li ng-repeat="form in module.forms">
-                    <a ng-click="filterList(module.name, form.name)">{{ form.name }}</a>
-                </ul>
-            </li>
-        </ul>
+        <div class="well">
+            <ul class="nav nav-pills nav-stacked">
+                <li ng-repeat="module in modules" role="presentation" ng-class="{ 'active' : moduleSelected(module)}">
+                    <a ng-click="filterList(module)"><i class="fa fa-folder-open"></i> {{ module.name }}</a>
+                    <div class="well">
+                        <ul class="nav nav-pills nav-stacked">
+                            <li ng-repeat="form in module.forms" ng-class="{ 'active' : formSearch.id === form.id }">
+                                <a ng-click="filterList(module, form)">{{ form.name }}</a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </li>
 {% endangularjs %}
 {% endblock %}
