tweak sidebar css [ci skip]

--- a/corehq/apps/app_manager/static/app_manager/less/summary_new.less
+++ b/corehq/apps/app_manager/static/app_manager/less/summary_new.less
@@ -1,8 +1,13 @@
 #hq-sidebar .well {
+  margin-bottom: 10px;
   padding-bottom: 0;
   padding-top: 0;
   padding-right: 0;
   border: 0;
   -webkit-box-shadow: none;
           box-shadow: none;
+}
+
+#hq-sidebar .well .nav > li > a {
+  padding: 5px 15px;
 }
