Renamed dashboard class icon to list-group-item-icon

--- a/corehq/apps/style/static/dashboard/less/dashboard.less
+++ b/corehq/apps/style/static/dashboard/less/dashboard.less
@@ -68,11 +68,11 @@
       &:hover {
         background-color: rgba(244, 244, 244, 0.9);
 
-        .icon {
+        .list-group-item-icon {
           visibility: visible;
         }
       }
-      .icon {
+      .list-group-item-icon {
         float: right;
         visibility: hidden;
       }
