Clearly distinguish between global and shared backends

--- a/corehq/apps/sms/templates/sms/gateway_list.html
+++ b/corehq/apps/sms/templates/sms/gateway_list.html
@@ -48,7 +48,8 @@
                 </div>
             </div>
             <!-- /ko -->
-            <!-- ko ifnot: canDelete --><span class="label"><i class="icon-info-sign"></i> {% trans 'Global Connection' %}</span><!-- /ko -->
+            <!-- ko if: isGlobal --><span class="label"><i class="icon-info-sign"></i> {% trans 'Global Connection' %}</span><!-- /ko -->
+            <!-- ko if: isShared --><span class="label"><i class="icon-info-sign"></i> {% trans 'Shared Connection' %}</span><!-- /ko -->
         </td>
     </script>
 
